[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/zoomed_out_nest.gd" type="Script" id=1]
[ext_resource path="res://art/enemies/enemy_piece.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/zoomed_out_enemy_small.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 17.43

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.420483, -15.8266, 0, 0, 0, 0, -5.34996, -1.7753, 0, 0, 0, 0, -0.835114, 15.4088, 0, 0, 0, 0, 3.21904, -0.162857, 0, 0, 0, 0, -0.374413, -15.5502, 0, 0, 0, 0, -0.420483, -15.8266 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -11.6155, -12.5096, 0, 0, 0, 0, -3.23075, 4.90483, 0, 0, 0, 0, 13.6769, 9.97252, 0, 0, 0, 0, 6.30573, -5.13841, 0, 0, 0, 0, -11.7998, -12.6478, 0, 0, 0, 0, -11.6155, -12.5096 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -15.8078, 0.159632, 0, 0, 0, 0, -0.0979958, -6.29016, 0, 0, 0, 0, 14.5062, 0.38998, 0, 0, 0, 0, -0.927254, 7.39261, 0, 0, 0, 0, -15.8078, 0.159632 )
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -10.5098, 11.8614, 0, 0, 0, 0, -7.00848, -6.93514, 0, 0, 0, 0, 11.4656, -8.45544, 0, 0, 0, 0, 7.59568, 8.86685, 0, 0, 0, 0, -10.5098, 11.8614 )
}

[node name="zoomed_out_nest" type="Area2D"]

position = Vector2( 30, 30 )
z_index = 3
z_as_relative = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="smallenemypath1" type="Path2D" parent="." index="2"]

editor/display_folded = true
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="smallenemypath1" index="0"]

position = Vector2( -0.420483, -15.8266 )
rotation = 1.9082
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="smallenemypath1/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="smallenemypath2" type="Path2D" parent="." index="3"]

editor/display_folded = true
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="smallenemypath2" index="0"]

position = Vector2( -11.6155, -12.5096 )
rotation = 1.12207
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="smallenemypath2/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="smallenemypath3" type="Path2D" parent="." index="4"]

editor/display_folded = true
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="smallenemypath3" index="0"]

position = Vector2( -15.8078, 0.159632 )
rotation = -0.389575
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="smallenemypath3/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="smallenemypath4" type="Path2D" parent="." index="5"]

editor/display_folded = true
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="smallenemypath4" index="0"]

position = Vector2( -10.5098, 11.8614 )
rotation = -1.38663
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="smallenemypath4/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="update_pos" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="timeout" from="update_pos" to="." method="_on_update_pos_timeout"]


